--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,13 @@
 * { outline:none; }
 
-html, body 
-{
-	margin:0px;
-	padding:10px;
-	font-size:13px;
-	font-family:Arial, Verdana;
-	color:#afafaf;
+html, body {
+    margin:0px;
+    padding: 0px;
 }
 
-#watch {
-	background: url('../i/back.png') no-repeat;
-	width:358px;
-	height: 606px;
-}
-
-#watch .screen {
-	position: relative;
-	top: 160px;
-	left: 60px;
-	width: 220px;
-	height: 270px;
-	overflow: hidden;
-}
-
-#player.table_text > div > label, #battleLog > div > label {
-	width:60px;
-	display:inline-block;
-	color: #afafaf;
-}
-
-#fightButton, #fightButton2 {
-	display:none;
-	color:#333;
-	padding: 5px;
-	margin: 5px;
-	border:1px solid #cfcfcf;
-	width: 80px;
-	cursor: pointer;
-	background: #cfcfcf;
-}
-
-#fightButton {
-	margin-left: 0px;
-	background: #F4BEBE;
-}
-
-#fightButton2 {
-	margin-right: 0px;
-	background: #BED1F4;
-}
-
-.table_text > div > span {
-	color: #fff;
-}
-
-.green {
-	color: #00ff00;
-}
-
-.red {
-	color: #ff0000;
+body {
+    margin:0px;
+    font-size:18px;
+    font-family: Helvetica, Arial, sans-serif;
+    color:#333;
 }
