--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,70 @@
 html, body {
     margin:0px;
     padding: 0px;
+    width: 100%;
+    height: 100%;
 }
+
+/* https://colorscheme.ru/#0031Tw0w0w0w0 */
 
 body {
     margin:0px;
     font-size:18px;
     font-family: Helvetica, Arial, sans-serif;
     color:#333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.wraper {
+    max-width: 900px;
+    min-width: 300px;
+}
+
+.adress {
+    padding: 0px;
+}
+
+.adress__line {
+    display: flex;
+    margin: 0.33em;
+    line-height: 32px;
+}
+
+.adress__line .adress__lineIcon {
+    margin-right: 8px;
+}
+
+.adress__lineIcon,
+.adress__line:hover .adress__lineIcon:hover {
+    width: 20px;
+    height: 20px;
+    background: #cfcfcf;
+    border-radius: 50%;
+    object-fit: cover;
+    padding: 8px;
+}
+
+.adress__line:hover .adress__lineIcon {
+    background: #1D7373;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.adress__line a {
+    text-decoration: none;
+    flex-grow: 1;
+}
+
+a {
+    color: #009999;
+}
+
+a:hover {
+    color: #1D7373;
+    text-decoration: underline;
 }
